--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@wordpress/block-editor": "^3.10.0",
     "classnames": "^2.2.6",
+    "dompurify": "^2.1.1",
     "react-images-upload": "^1.2.8",
     "react-media-library": "^1.0.3",
     "redux-thunk": "^2.3.0"
